tests/failed/09-unsupported-repr.stderr
error: Unsupported repr type
 --> $DIR/09-unsupported-repr.rs:5:1
  |
5 | #[repr(C)]
  | ^^^^^^^^^^
